--- a/Woo-ChapinFront/package.json
+++ b/Woo-ChapinFront/package.json
@@ -11,13 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^12.1.3",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
+    "@angular/material": "^10.1.0",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "angular-notifier": "^9.1.0",
+    "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
