--- a/Woo-ChapinFront/package.json
+++ b/Woo-ChapinFront/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-slick-carousel": "^0.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
